--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,13 @@
     {% include header.html %}
 
     <div class="page-content">
-        {{ content }}
+      {% include intro.html %}
+      {% include skills.html %}
+      {% include portfolio.html %}
+      {% include experience.html %}
+      {% include education.html %}
+      {% include personal.html %}
+        <!-- {{ content }} -->
     </div>
 
     {% include footer.html %}
