cleaned up new sections, skills, contact, whats next, and fixed responsive layout. Some content tweaks as well.

--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -1,7 +1,7 @@
 <!-- Personal Section -->
 <section id="personal">
 <h2 class="section-title">Personal</h2>
-<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our two-and-a-half year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, so mountains and seasons are 'new' to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
+<p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our two-and-a-half year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, so mountains and seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
   <li><h3>Currently Reading:</h3>Shogun (James Clavell), You Are My Favorite Client (Mike&nbsp;Monteiro)</li>
   <li><h3>Currently Watching:</h3>Narcos, and the never ending Netflix queue of&nbsp;movies</li>
