--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,6 +1,6 @@
 <!-- Portfolio Section -->
 <section id="portfolio">
-  <h2 class="section-title">Portfolio</h2>
+  <h2 class="section-title">Selected Projects</h2>
   <ul class="entries">
     {% for post in site.posts %}
 
