--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,11 +9,14 @@
 
     <div class="page-content">
       {% include intro.html %}
-      {% include skills.html %}
       {% include portfolio.html %}
+      {% include skills.html %}
       {% include experience.html %}
       {% include education.html %}
       {% include personal.html %}
+      {% include next.html %}
+      {% include contact.html %}
+      {% include js.html %}
         <!-- {{ content }} -->
     </div>
 
