--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,9 +1,9 @@
 <!-- Profile Section -->
 <section id="profile">
-  <img src="images/fall2015_square.jpg" alt="profile picture"/>
+  <img src="images/summer2016_square.jpg" alt="profile picture"/>
   <h2 class="page-title">Frederik Van&nbsp;Geloven</h2>
   <div class="info">
-    <p>designer - creative director</p>
+    <p>designer - creative&nbsp;director</p>
     <p class="type">& front-end developer</p>
 
 <!--
