fixed typos in Skills

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,7 +13,7 @@
                                     <h3>Research Workshops</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>In my current position, I've introduced the practice of organising Research Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
+                                  <p>In my current position, I've introduced the practice of organizing Research Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
                                   <p>Usually, we discuss things like Personas, Style Tiles and Style Guides, Use Cases, Task Analysis, User Stories, etc. We then work with the client to further develop these elements and write up a comprehensive project or product proposal.</p>                                </div>
                                 </div>
                         </li>
@@ -39,7 +39,7 @@
                                     <h3>Wireframes</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Despite this being 2016, and the proliferation of platforms and devices, wireframing is still a crucial step in the design of most web applications. The tools I use vary, sometimes I stick to pen and paper, other times I use Sketch and on occasion I'll go all out and design interactive wireframes using a combination of tools (Sketch, Balsamiq, Marvel, ...). Regardless of the tool I use, I always make sure to annotate well and to sollicit feedback from the developer.</p>
+                                  <p>Despite this being 2016, and the proliferation of platforms and devices, wireframing is still a crucial step in the design of most web applications. The tools I use vary, sometimes I stick to pen and paper, other times I use Sketch and on occasion I'll go all out and design interactive wireframes using a combination of tools (Sketch, Balsamiq, Marvel, ...). Regardless of the tools used, I always make sure to annotate well and to solicit feedback from the developer.</p>
                                 </div>
                             </div>
                         </li>
@@ -79,7 +79,7 @@
                                     <h3>User and usability testing</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>For user testing and usability testing, I like to use tools like surveys and feedback forms, Peek, A/B testing, the occasional focus group, and semi-annual touchpoint meetings with the client.</p>
+                                  <p>For user testing and usability testing, I like to use tools like surveys and feedback forms, Peek, A/B testing, the occasional focus group, and regular touchpoint meetings with the client.</p>
                                 </div>
                         </li>
                         <li>
@@ -142,7 +142,7 @@
                                     <h3>Additional Communication Skills</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p class="description">My background in communication studies and my passion for language has helped me run social media campaigns, writing website copy or blog posts, and of course pitching projects and products to potential clients.</p>
+                                  <p class="description">My background in communication studies and my passion for language have helped me run social media campaigns, write website copy or blog posts, and of course pitch projects and products to potential clients.</p>
                                 </div>
                             </div>
                         </li>
