added navigation and other features from Agency theme, most notably portfolio overlays. also deleted some copy and implemented new typography and colors

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,16 +1,14 @@
 <!-- Profile Section -->
-<section id="profile">
-  <img src="images/fall2015_square.jpg" alt="profile picture"/>
-  <h2 class="page-title">Frederik Van&nbsp;Geloven</h2>
-  <div class="info">
-    <p>designer - creative&nbsp;director</p>
-    <p class="type">& front-end developer</p>
-
-<!--
-    <ul>
-      <li>designer</li><span>+</span>
-      <li>creative director</li>
-    </ul>
--->
-  </div>
-</section>
+<div class="intro">
+  <section id="profile">
+    <img src="images/fall2015_square.jpg" alt="profile picture"/>
+    <h1 class="page-title">Frederik Van&nbsp;Geloven</h1>
+    <div class="info">
+      <p>UX designer - creative&nbsp;director</p>
+      <!-- <p class="type">& front-end developer</p> -->
+    </div>
+    <div>
+      <a href="#portfolio" class="page-scroll btn btn-xl">Tell me more</a>
+    </div>
+  </section>
+</div>
