--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@
 
   {% include head.html %}
 
-  <body class="home">
+  <body id="page-top" class="home">
 
     {% include header.html %}
 
@@ -16,11 +16,11 @@
       {% include personal.html %}
       {% include next.html %}
       {% include contact.html %}
+      {% include footer.html %}
+      {% include modals.html %}
       {% include js.html %}
         <!-- {{ content }} -->
     </div>
-
-    {% include footer.html %}
 
   </body>
 
