--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -3,15 +3,19 @@
   <h2 class="section-title">Selected Projects</h2>
   <ul class="entries">
     {% for post in site.posts %}
-
     <li>
-      <a href="{{ post.url }}">
-        <img src="{{ post.image }}" />
-        <h3>{{ post.title }}</h3>
-<!-- 					<p class="description">{{ post.description }}</p> -->
-      </a>
-    </li>
-
+            <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                <div class="portfolio-hover">
+                    <div class="portfolio-hover-content">
+                        <i class="fa fa-plus fa-3x"></i>
+                    </div>
+                </div>
+                <img src="{{ post.image }}" alt="portfolio thumbnail">
+            </a>
+            <div class="portfolio-caption">
+                <h3>{{ post.title }}</h3>
+                <!-- <p class="text-muted">{{ post.description }}</p> -->
+            </div>
     {% endfor %}
   </ul>
 </section>
