--- a/css/main.scss
+++ b/css/main.scss
@@ -6,8 +6,8 @@
 //Import fonts
 
 // @import 'https://fonts.googleapis.com/css?family=Domine|Montserrat:700';
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
-
+// @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400,800);
+@import url('https://fonts.googleapis.com/css?family=Abril+Fatface|Roboto:400,300');
 @font-face {
     font-family: 'knileregular';
     src: url('/fonts/knile-regular-webfont.eot');
@@ -22,8 +22,9 @@
 
 
 // Our variables
-$base-font-family: 'knileregular', serif;
-$heading-font: 'Open Sans', sans-serif;
+$base-font-family: 'Roboto', sans-serif;
+$display-font: 'Abril Fatface', cursive;
+$heading-font: 'Roboto', serif;
 $base-font-size:   16px;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
@@ -32,14 +33,16 @@ $spacing-unit:     30px;
 
 $text-color:       #041D3F;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
-$link-color:  	   #1E5D7A/* #284d70 */;
-
+$brand-color:      #074B5D;
+$link-color:  	   #288AA9;
 $dark-blue:        #041D3F;
 $grey-color:       #828282;
+$blue-grey:        #A5C9CC;
+$blue-grey-light:  #D2E4E6;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
-
+$emphasis-color: #EB5515;
+// #1E5D7A
 $on-palm:          600px;
 $on-laptop:        800px;
 
@@ -74,7 +77,7 @@ $size-xl: 1400px;
 
 // Custom Styles
 body {
- 	background: linear-gradient(to right bottom, #D2E4E6/* #A5C9CC */, #EEEFED 30%, #bec0bb 95%);
+ 	background: linear-gradient(to right bottom, $blue-grey-light, $grey-color-light 30%, $blue-grey-light 95%);
  	color: $text-color;
 }
 a {
@@ -90,15 +93,32 @@ header.site-header {
 		height: 30px;
 	}
 }
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
+  font-family: $display-font;
+  color: $brand-color;
+}
+h3 {
+  font-size: 1.2em;
+}
+h3, h4, h5, h6 {
   font-family: $heading-font;
 }
-h2 {
-  font-weight: 800;
-  text-transform: uppercase;
+h1 {
+  font-size: 4em;
 }
 h3, h4 {
-  font-weight: 400;
+  font-weight: 100;
+}
+a.btn, button.btn.btn-default {
+  background: $emphasis-color;
+  border: none;
+  border-radius: 0;
+  color: $grey-color-light;
+  text-transform: uppercase;
+  margin: 1em auto;
+  &:hover {
+    background-color: darken($emphasis-color, 5%);
+  }
 }
 .img-circle {
   border-radius:50%;
@@ -113,13 +133,135 @@ h3, h4 {
 
 footer.site-footer {
 	border: none;
+  span {
+    display: block;
+    width: 320px;
+    margin: 0 auto;
+    font-size: .8em;
+  }
 }
 
 section {
 	width: 100%;
-	padding: 1em 2em;
 }
 
+/* NAVBAR */
+
+.navbar-default {
+    border-color: transparent;
+    background-color: $blue-grey-light;
+}
+
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus,
+.navbar-default .navbar-brand:active,
+.navbar-default .navbar-brand.active {
+    color: $text-color;
+}
+
+.navbar-default .navbar-collapse {
+    border-color: rgba(255,255,255,.02);
+}
+
+.navbar-default .navbar-toggle {
+    border-color: $dark-blue;
+    background-color: $dark-blue;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff;
+}
+
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+    border-color: transparent;
+    background-color: $blue-grey-light;
+}
+
+.navbar-default .nav li a {
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 1px;
+    color: $text-color;
+}
+
+.navbar-default .nav li a:hover,
+.navbar-default .nav li a:focus {
+    outline: 0;
+    color: $brand-color;
+}
+
+.navbar-default .navbar-nav>.active>a {
+    border-radius: 0;
+    color: $text-color;
+    background-color: $blue-grey-light;
+}
+
+.navbar-default .navbar-nav>.active>a:hover,
+.navbar-default .navbar-nav>.active>a:focus {
+    color: $brand-color;
+    background-color: $blue-grey-light;
+}
+
+@media(min-width:768px) {
+    .navbar-default {
+        padding: 25px 0;
+        border: 0;
+        background-color: transparent;
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+    }
+
+    .navbar-default .navbar-brand {
+        font-size: 2em;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s;
+    }
+
+    .navbar-default .navbar-nav>.active>a {
+        border-radius: 0px;
+    }
+
+    .navbar-default.navbar-shrink {
+        padding: 0 15px;
+        background-color: $grey-color-light;
+    }
+
+    .navbar-default.navbar-shrink .navbar-brand {
+        font-size: 1.5em;
+    }
+}
+
+.navbar-default {
+  padding: 5px 15px;
+}
+.navbar>.container .navbar-brand {
+  margin-left: 0;
+}
+.navbar-brand {
+  padding: 15px 0;
+}
+.navbar-header {
+  padding: 0 20px;
+  a img {
+  display: inline-block;
+  height: 30px;
+  }
+}
+.navbar-nav {
+  font-family: $heading-font;
+  font-size: 14px;
+}
+.navbar-nav.navbar-right:last-child {
+  margin-right: auto;
+}
+
+/* SECTIONS */
+section {
+  padding: 100px 20px 0px;
+}
 div.portfolio {
   p {
     font-size: 1.5em;
@@ -130,52 +272,74 @@ div.portfolio {
   }
 }
 h2.section-title {
-	font-size: 1.5em;
+	font-size: 2.5em;
+  border-bottom: 1px solid $text-color;
 }
-
+div.intro div {
+  @include span-columns(12);
+  a.btn {
+    display: block;
+    width: 135px;
+    margin: 100px auto 0;
+  }
+}
 section#profile {
-// 	padding: 1em 0 2em;
+  padding: 150px 20px 50px;
 	@include outer-container;
   margin-bottom: 2em;
-  h2.page-title {
-    @include span-columns(9);
-    @include shift(.5);
-    font-family: $heading-font;
-    font-size: 3.5em;
+  text-align: center;
+  h1.page-title {
+    @include span-columns(12);
+    font-family: $display-font;
+    font-size: 4em;
     line-height: 1em;
-//     margin-top: .2em;
-    margin-bottom: .2em;
+    margin: .5em auto .25em;
   }
 	.info {
-    @include span-columns(9);
-    @include shift(.5);
+    @include span-columns(12);
 	}
 	p {
-		font-size: 2em;
-		font-weight: 400;
+    font-family: $heading-font;
+		font-size: 1.2em;
+		font-weight: 300;
 		margin: 0;
+    text-transform: uppercase;
   }
 	img {
     @include span-columns(2);
+    @include shift(5);
 		display: inline-block;
 		border-radius: 50%;
 	}
 	/*typing animation */
   p.type {
     font-family: monospace;
-    font-size: 1.5em;
+    font-size: 1em;
     white-space: nowrap;
     overflow: hidden;
     width: 14em;
     margin: 0 auto;
-    animation: type 8s steps(38, end);
+    opacity: .8;
+    //animation: slidein 1.5s;
+    // animation: type 8s steps(38, end);
   }
 }
-@keyframes type {
-  0%{width: 0;}
-  30%{width: 0;}
-  100%{ width: 100;}
+@keyframes slidein {
+  from {
+    margin-left: -100%;
+    width: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
+// @keyframes type {
+//   0%{width: 0;}
+//   30%{width: 0;}
+//   100%{ width: 100;}
+// }
 
 section#portfolio, section#experience, section#education, section#skills, section#personal, section#contact, section#whats-next {
   @include outer-container;
@@ -189,6 +353,9 @@ section#portfolio, section#experience, section#education, section#skills, sectio
 	}
 }
 section#experience, section#education, section#personal, section#contact,section#whats-next {
+  max-width: 768px;
+  margin-left: auto;
+  margin-right: auto;
   h3 {
     margin: .25em 0;
   }
@@ -198,17 +365,10 @@ section#experience, section#education, section#personal, section#contact,section
 		}
   }
 }
-
+.modal-body {
+  margin-top: 50px;
+}
 section#portfolio {
-
-  h2 {
-//     @include span-columns(4);
-    // font-size: 2em;
-    // padding: 0;
-    // line-height: .75em;
-    // color: $dark-blue;
-//     margin-bottom: 1em;
-    }
   ul {
     @include outer-container;
 		li {
@@ -238,6 +398,7 @@ section#portfolio {
     color: $dark-blue;
     text-align: center;
     height: 3em;
+    font-weight: 300;
       }
   img {
     z-index: 10;
@@ -256,28 +417,63 @@ div.portfolio {
     width:100%;
   }
 }
+.portfolio-modal .close-modal {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    width: 45px;
+    height: 45px;
+    background-color: transparent;
+    cursor: pointer;
+}
+.portfolio-modal .close-modal:hover {
+    opacity: .3;
+}
+.portfolio-modal .close-modal .lr {
+    z-index: 1051;
+    width: 1px;
+    height: 45px;
+    margin-left: 30px;
+    background-color: #222;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+.portfolio-modal .close-modal .lr .rl {
+    z-index: 1052;
+    width: 1px;
+    height: 45px;
+    background-color: #222;
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+.banner_image {
+  width: 100%;
+  max-width: 600px;
+  display: block;
+  margin: 1em auto;
+}
 #feature1 {
   float: left;
+  border-top: 1px solid $brand-color;
   width: 100%;
-  padding: 0;
-  background-color: #255363;
-  color: #DAE2E3;
-  //color: $grey-color-light;
-  font-size: .85em;
+  padding: 30px 0;
   img, div {
     @include span-columns(6);
   }
 }
 #feature2 {
   float: left;
-  padding: 0;
+  border-top: 1px solid $brand-color;
+  padding: 30px 0;
   img {
     display: block;
     float: left;
     width: 100%;
   }
   div {
-    font-size: 1.5em;
+    font-size: 1em;
     text-align: center;
     padding: 1em;
     @include span-columns(12);
@@ -403,99 +599,6 @@ div.portfolio {
     font-size: .7em;
   }
 }
-/* NAVBAR */
-
-.navbar-default {
-    border-color: transparent;
-    background-color: #222;
-}
-
-.navbar-default .navbar-brand {
-    font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: $text-color;
-}
-
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus,
-.navbar-default .navbar-brand:active,
-.navbar-default .navbar-brand.active {
-    color: #000;
-}
-
-.navbar-default .navbar-collapse {
-    border-color: rgba(255,255,255,.02);
-}
-
-.navbar-default .navbar-toggle {
-    border-color: $text-color;
-    background-color: $text-color;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
-}
-
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-    background-color: $text-color;
-}
-
-.navbar-default .nav li a {
-    text-transform: uppercase;
-    font-weight: 400;
-    letter-spacing: 1px;
-    color: #fff;
-}
-
-.navbar-default .nav li a:hover,
-.navbar-default .nav li a:focus {
-    outline: 0;
-    color: $text-color;
-}
-
-.navbar-default .navbar-nav>.active>a {
-    border-radius: 0;
-    color: #fff;
-    background-color: $text-color;
-}
-
-.navbar-default .navbar-nav>.active>a:hover,
-.navbar-default .navbar-nav>.active>a:focus {
-    color: #fff;
-    background-color: $text-color;
-}
-
-@media(min-width:768px) {
-    .navbar-default {
-        padding: 25px 0;
-        border: 0;
-        background-color: transparent;
-        -webkit-transition: padding .3s;
-        -moz-transition: padding .3s;
-        transition: padding .3s;
-    }
-
-    .navbar-default .navbar-brand {
-        font-size: 2em;
-        -webkit-transition: all .3s;
-        -moz-transition: all .3s;
-        transition: all .3s;
-    }
-
-    .navbar-default .navbar-nav>.active>a {
-        border-radius: 3px;
-    }
-
-    .navbar-default.navbar-shrink {
-        padding: 10px 0;
-        background-color: #222;
-    }
-
-    .navbar-default.navbar-shrink .navbar-brand {
-        font-size: 1.5em;
-    }
-}
-
 
 /* SKILLS SECTION */
 .timeline {
@@ -560,7 +663,7 @@ div.portfolio {
     width: 240px;
     height: 240px;
     margin-left: 0;
-    border: 7px solid #f1f1f1;
+    border: 2px solid $emphasis-color;
     border-radius: 100%;
     text-align: center;
     color: #fff;
@@ -719,14 +822,13 @@ div.portfolio {
 /* RESPONSIVE */
 @media screen and (max-width: $size-xl) {
   section#profile {
-    h2.page-title {
-      @include span-columns(9);
-      font-size: 3.2em;
+    h1.page-title {
+      font-size: 4em;
     }
     p {
-      font-size: 2em;
+      font-size: 1.2em;
       &.type {
-        font-size: 1.5em;
+        font-size: 1em;
         width: 14em;
         margin-left: 0;
       }
@@ -735,14 +837,14 @@ div.portfolio {
   }
 @media screen and (max-width: $size-l) {
   section#profile {
-    h2.page-title {
-      @include span-columns(9);
-      font-size: 2.8em;
+    h1.page-title {
+      // @include span-columns(11);
+      font-size: 4em;
     }
     p {
-      font-size: 1.8em;
+      font-size: 1em;
       &.type {
-        font-size: 1.5em;
+        font-size: 1em;
         width: 14em;
         margin-left: 0;
       }
@@ -760,14 +862,14 @@ div.portfolio {
 
 @media screen and (max-width: $size-m) {
   section#profile {
-    h2.page-title {
-      @include span-columns(8);
-      font-size: 2.3em;
+    h1.page-title {
+      @include span-columns(12);
+      font-size: 3.2em;
     }
     p {
-      font-size: 1.5em;
+      font-size: 1em;
       &.type {
-        font-size: 1.2em;
+        font-size: 1em;
         width: 14em;
         margin-left: 0;
       }
@@ -784,29 +886,37 @@ div.portfolio {
 }
 @media screen and (max-width: $size-s) {
   section#profile {
-    h2.page-title {
-      @include span-columns(7);
-      @include shift(.5);
-      // font-size: 2.3em;
+    h1.page-title {
+      @include span-columns(12);
+      @include shift(0);
+      font-size: 3em;
+      text-align: center;
+    }
+    div.info {
+      @include span-columns(12);
+      margin: 0;
     }
     p {
-      font-size: 1.1em;
+      font-size: 1em;
+      text-align: center;
       &.type {
         font-size: 1em;
         width: 14em;
-        margin-left: 0;
+        margin: 0 auto;
       }
-    }
-    .info {
-      @include span-columns(7);
-      @include shift(.5);
     }
     img {
       @include span-columns(3);
+      @include shift(5);
       max-width: 120px;
       max-height: 120px;
+      margin-bottom: 40px;
     }
   }
+  div.intro div a.btn {
+    margin-top: 100px;
+  }
+
   #skills {
     @include outer-container;
     .timeline-panel {
@@ -843,7 +953,7 @@ div.portfolio {
       width: 8em;
       margin: 0 auto 1em;
     }
-    h2.page-title {
+    h1.page-title {
       font-size: 2em;
       width: 100%;
       margin: 0 auto;
