updated personal and skills sections

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -13,7 +13,7 @@
                                     <h3>Research Workshops</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>In my current position, I've introduced the practice of organizing Research Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
+                                  <p>In my current position, I've introduced Research Workshops. During these workshops we invite the client over to learn about common web design concepts, strategies and best practices.</p>
                                   <p>Usually, we discuss things like Personas, Style Tiles and Style Guides, Use Cases, Task Analysis, User Stories, etc. We then work with the client to further develop these elements and write up a comprehensive project or product proposal.</p>                                </div>
                                 </div>
                         </li>
@@ -39,7 +39,7 @@
                                     <h3>Wireframes</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>Despite this being 2016, and the proliferation of platforms and devices, wireframing is still a crucial step in the design of most web applications. The tools I use vary, sometimes I stick to pen and paper, other times I use Sketch and on occasion I'll go all out and design interactive wireframes using a combination of tools (Sketch, Balsamiq, Marvel, ...). Regardless of the tools used, I always make sure to annotate well and to solicit feedback from the developer.</p>
+                                  <p>Despite the proliferation of platforms and devices, wireframing is still a crucial step in the design of most web applications. The tools I use vary, sometimes I stick to pen and paper, other times I use Sketch and on occasion I'll go all out and design interactive wireframes using a combination of tools (Sketch, Balsamiq, Invision, ...). Regardless of the tools used, I always make sure to annotate well and to solicit feedback from the developers and clients.</p>
                                 </div>
                             </div>
                         </li>
@@ -54,7 +54,7 @@
                                 <div class="timeline-body">
                                   <p>Instead of pixel perfect mockups, I often prefer to build a quick prototype. By leveraging frameworks, libraries, and templates, I find that this is often faster and easier for the client to comprehend.</p>
                                   <p>Some of the tools I use for this are: handcrafted html and css, Jekyll, Drupal or WordPress, and libraries or frameworks such as Bourbon, Neat, Twig, Compass, etc.</p>
-                                  <p>Of course some projects still benefit from classic mockups drawn to perfection in Sketch, Photoshop or Illustrator.</p>
+                                  <p>Of course some projects still benefit from classic mockups drawn to perfection in Sketch, Photoshop or Illustrator. To make PNG mockups interactive I prefer Invision or Marvel.</p>
                                 </div>
                             </div>
                         </li>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h3>Code Snippets</h3>
+                                    <h3>UI Framework</h3>
                                 </div>
                                 <div class="timeline-body">
                                   <p>To make rapid prototyping and final development as efficient as possible, I've created a library of code snippets for our developers. Most common application elements and some complete tasks are available as html/css/js snippets. This not only increases efficiencies, it also ensures more consistent front-end code.</p>
@@ -79,7 +79,7 @@
                                     <h3>User and usability testing</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>For user testing and usability testing, I like to use tools like surveys and feedback forms, Peek, A/B testing, the occasional focus group, and regular touchpoint meetings with the client.</p>
+                                  <p>For user testing and usability testing, I like to use tools like surveys and feedback forms, Peek, A/B testing, regular touchpoint meetings with the client, and the occasional focus group.</p>
                                 </div>
                         </li>
                         <li>
@@ -104,7 +104,7 @@
                                     <h3>Project Management</h3>
                                 </div>
                                 <div class="timeline-body">
-                                  <p>While we currently use a semi-Agile approach to project management and I'm not formally trained in Agile, SCRUM or any other project management system, I have plenty of experience making sure a project moves along a well planned path from start to finish.</p>
+                                  <p>While we currently use a semi-Agile approach to project management and I'm not formally trained in Agile or SCRUM, I have plenty of experience making sure a project moves along a well planned path from start to finish.</p>
                                 </div>
                             </div>
                         </li>
