Emphasized UX Design over CD

--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
     <img src="images/fall2015_square.jpg" alt="profile picture"/>
     <h1 class="page-title">Frederik Van&nbsp;Geloven</h1>
     <div class="info">
-      <p>UX designer - creative&nbsp;director</p>
+      <p>UX designer</p>
       <!-- <p class="type">& front-end developer</p> -->
     </div>
     <div>
