--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -4,13 +4,13 @@
   <ul>
     <li>
       <span class="date">2015-present</span>
-      <h3>Creative Director - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
-      <p class="description">Creative Direction, web design and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont&nbsp;State&nbsp;Government.</p>
+      <h3>UX Designer and Creative Director - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
+      <p class="description">UX Design, Creative Direction, and business planning for Vermont Information Consortium, a web agency focussed on providing websites and online services for Vermont&nbsp;State&nbsp;Government.</p>
     </li>
     <li>
       <span class="date">2011-2015</span>
       <h3>Creative Services Project Manager - <a class="company" href="http://vermontegov.com">Vermont&nbsp;Information&nbsp;Consortium</a></h3>
-      <p class="description">Web design, front-end development and CMS administration/configuration for Vermont&nbsp;Information&nbsp;Consortium.</p>
+      <p class="description">UX/UI design, front-end development and CMS administration/configuration for Vermont&nbsp;Information&nbsp;Consortium.</p>
     </li>
     <li>
       <span class="date">2007-2011</span>
