--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="site-footer">
 
-<span class="copyright">Copyright &copy; {{ site.title }} {{ 'now' | date: "%Y" }}</span>
+<span class="copyright">Copyright &copy; {{ 'now' | date: "%Y" }} | {{ site.title }}</span>
 
 </footer>
