update currently reading and watching and whats next statement

--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -3,8 +3,8 @@
 <h2 class="section-title">Personal</h2>
 <p>When I'm not working, I enjoy spending time with my amazing wife <a href="http://lauramacchia.com">Laura</a>, and our three year old son Felix. We enjoy all kinds of outdoor activities here in Vermont. I'm originally from Belgium, so mountains and seasons are still somewhat new to me. Before you ask, yes, the chocolate and beer cliches&nbsp;apply.</p>
 <ul class="entries">
-  <li><h3>Currently Reading:</h3>Shogun (James Clavell), You Are My Favorite Client (Mike&nbsp;Monteiro), Change By Design (Tim Brown)</li>
-  <li><h3>Currently Watching:</h3>Stranger Things, and the never ending Netflix queue of&nbsp;movies</li>
-  <li><h3>Currently Learning:</h3> Drupal 8, various design systems (like Material Design and Lightning Design System), Conversational UI and Facebook&nbsp;bots</li>
+  <li><h3>Currently Reading:</h3>Across the River and Into the Trees (Ernest Hemingway), You Are My Favorite Client (Mike&nbsp;Monteiro), Change By Design (Tim&nbsp;Brown)</li>
+  <li><h3>Currently Watching:</h3>Hotel Beau Sejour, and the never ending Netflix queue of&nbsp;movies</li>
+  <li><h3>Currently Learning:</h3> Drupal 8, various design systems (like Material Design and Lightning Design System), Conversational UI</li>
 </ul>
 </section>
