--- a/_includes/next.html
+++ b/_includes/next.html
@@ -1,5 +1,5 @@
 <!-- What's Next Section -->
 <section id="whats-next">
 <h2 class="section-title">What's Next?</h2>
-<p>For my next professional challenge, I would like to focus even more on UX and UI design. I am passionate about solving problems through smart design and believe that this aligns best with my talents and experience. I thrive as part of a team of driven web professionals. I see myself working closely with front-end and back-end developers to create the best product possible.</p>
+<p>I am passionate about solving problems through smart design and believe that this aligns best with my talents and experience. I thrive as part of a team of driven web professionals. As the UX Designer, I prefer working closely with front-end and back-end developers to create the best product possible.</p>
 </section>
