added some none breaking spaces to keep terms together upon line breaks

--- a/_includes/personal.html
+++ b/_includes/personal.html
@@ -5,6 +5,6 @@
 <ul class="entries">
   <li><h3>Currently Reading:</h3>Across the River and Into the Trees (Ernest Hemingway), You Are My Favorite Client (Mike&nbsp;Monteiro), Change By Design (Tim&nbsp;Brown)</li>
   <li><h3>Currently Watching:</h3>Hotel Beau Sejour, and the never ending Netflix queue of&nbsp;movies</li>
-  <li><h3>Currently Learning:</h3> Drupal 8, various design systems (like Material Design and Lightning Design System), Conversational UI</li>
+  <li><h3>Currently Learning:</h3> Drupal 8, various design systems (like Material&nbsp;Design and Lightning&nbsp;Design&nbsp;System), Conversational&nbsp;UI</li>
 </ul>
 </section>
